@@ -1,4 +1,5 @@
 - add scoped_query to list methods, so it can be used for calculations, like each_record_in_scope is used to iterate over every filtered record
+- fix field_search_ignore? and search_ignore?
 
 = 3.4.14
 - fix filter order in AS controllers which inherit from AS controllers
